# xng-editor

./: .gitmodules  BUILDING.md  CMakeLists.txt  README.md
cmake/: config.cmake  editor.cmake  xeditor.cmake
editor/src/: main.cpp  offscreenrenderer.hpp  paths.hpp
editor/src/gui/: mainwindow.cpp  mainwindow.hpp
editor/src/gui/dialog/: projectbuilddialog.hpp
editor/src/gui/tool/: filebrowser.hpp
editor/src/gui/widgets/: entityeditwidget.hpp  entityscenewidget.hpp  entitywidget.hpp  sceneeditwidget.hpp  scenerenderwidget.hpp
editor/src/gui/widgets/components/: transformcomponentwidget.hpp
editor/src/headertool/: componentmetadata.hpp  headergenerator.cpp  headergenerator.hpp  headerparser.cpp  headerparser.hpp  headertoolmacros.hpp  syntaxexception.hpp  token.hpp  tokenizer.cpp  tokenizer.hpp
editor/src/io/: paths.hpp
editor/src/project/: assetbundle.hpp  buildoptimization.hpp  buildplatform.hpp  buildsettings.hpp  project.cpp  project.hpp  projectsettings.hpp
editor/src/render/: offscreenrenderer.hpp
editor/src/widgets/: buildsettingswidget.hpp  camerawidget.hpp  colliderwidget.hpp  colorwidget.hpp  entityeditwidget.cpp  entityeditwidget.hpp  filebrowser.hpp  filebrowserwidget.hpp  metadatacomponentwidget.hpp  rectanglewidget.hpp  sceneeditwidget.hpp  scenerenderwidget.hpp  transformwidget.hpp  urilistwidget.hpp  uriwidget.hpp  vector2widget.hpp  vector3widget.hpp  vector4widget.hpp
editor/src/widgets/components/: audiolistenercomponentwidget.hpp  audiosourcecomponentwidget.hpp  buttoncomponentwidget.hpp  cameracomponentwidget.hpp  canvascomponentwidget.hpp  canvastransformcomponentwidget.hpp  componentwidget.hpp  lightcomponentwidget.hpp  meshrendercomponentwidget.hpp  recttransformcomponentwidget.hpp  rigidbodycomponentwidget.hpp  skinnedmeshcomponentwidget.hpp  skyboxcomponentwidget.hpp  spriteanimationcomponentwidget.hpp  spritecomponentwidget.hpp  textcomponentwidget.hpp  transformcomponentwidget.hpp
editor/src/widgets/math/: rectanglewidget.hpp  transformwidget.hpp  vector2widget.hpp  vector3widget.hpp  vector4widget.hpp
editor/src/windows/: builddialog.hpp  editorwindow.cpp  editorwindow.hpp  mainwindow.cpp  mainwindow.hpp
include/compiler/: buildoptimization.hpp  buildplatform.hpp  buildsettings.hpp  componentdescription.hpp  projectcompiler.hpp
include/gui/: mainwindow.hpp
include/gui/dialog/: projectbuilddialog.hpp
include/gui/scene/: entityeditwidget.hpp  sceneeditwidget.hpp
include/gui/tool/: filebrowser.hpp
include/gui/widgets/: entityscenewidget.hpp  entitywidget.hpp
include/gui/widgets/components/: audiolistenercomponentwidget.hpp  audiosourcecomponentwidget.hpp  canvascomponentwidget.hpp  canvastransformcomponentwidget.hpp  componentwidget.hpp  rigidbodycomponentwidget.hpp  spriteanimationcomponentwidget.hpp  transformcomponentwidget.hpp
include/gui/widgets/math/: rectanglewidget.hpp  transformwidget.hpp
include/project/: buildsettings.hpp  project.hpp
src/compiler/: projectcompiler.cpp
src/gui/: main.cpp  mainwindow.cpp
template/: CMakeLists.txt  project-settings.json
template/assets/: defaultScene.json  defaultScene.xscene
template/plugin/: README.md  registrations.cpp
template/source/: game.hpp  main.cpp
template/source/components/: examplecomponent.hpp
template/source/systems/: examplesystem.hpp
